<resources>
    <string name="app_name">DCS Timetable</string>
    <string name="am_7">7AM - 8AM</string>
    <string name="am_8">8AM - 9AM</string>
    <string name="am_9">9AM - 10AM</string>
    <string name="am_10">10AM - 11AM</string>
    <string name="am_11">11AM - 12PM</string>
    <string name="pm_12">12PM - 1PM</string>
    <string name="pm_1">1PM - 2PM</string>
    <string name="pm_2">2PM - 3PM</string>
    <string name="pm_3">3PM - 4PM</string>
    <string name="pm_4">4PM - 5PM</string>
</resources>
=======
</resources>
>>>>>>> origin/master
